# cmd/server/routes_customer.go
@@ -9,5 +9,6 @@ import (
 func registerCustomerRoutes(r *gin.RouterGroup, h *handler.Handler) {
 	r.GET("/clientes/me", h.Customer)
 	r.GET("/clientes/me/tarjetas", h.Cards)
+	r.GET("/clientes/me/movimientos", h.CustomerMovements)
 	r.GET("/clientes/me/tarjetas/:card_id/movimientos", h.CardMovements)
 }
